Updated the footer to have lines closer together; Made the italics on the homepage not bold; started to setup the header on medium and small screens; updated the people data so that raja is a past contributor; Fixed the people names to be on the top left and not centered above the image

--- a/static/css/mediumScreen.css
+++ b/static/css/mediumScreen.css
@@ -1,3 +1,58 @@
+/* ======================================= GLOBAL STYLING ======================================= */
+
+body {
+    font-family: 'DM Sans', sans-serif;
+    overflow-x:hidden;
+}
+
+nav {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    ul {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+        float: right;
+
+        li {
+            display: inline-block;
+            list-style: none;
+            margin: 10px 15px;
+
+            a {
+                text-decoration: none;
+                color: black;
+                font-size: 18px;
+            }
+
+            a.active {
+                color: black;
+                text-decoration: underline;
+                text-decoration-color: gold;
+            }
+        }
+    }
+}
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    font-size: 12px;
+    line-height: .25;
+    img {
+        margin: 60px 0 50px 0;
+        width: 110px;
+        height: 110px;
+    }
+}
+
 /* ====================================== CLASSES STYLING (Zhuoyan)====================================== */
 .classes-page {
     width: 100%;
@@ -217,4 +272,279 @@
 .projects-page .projects-back-to-top img {
     width: 26px;
     height: auto;
+}
+
+/* ====================================== HOMEPAGE STYLING ====================================== */
+
+.heli-logo {
+    height: 125px;
+    width: 125px;
+}
+
+#homepage-main {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#homepage-leftOfBox {
+    /* padding-left: 10%; */
+    display: inline-block;
+    align-content: end;
+    margin: 0 auto 100px auto;
+}
+
+#homepage-box {
+    margin-top: 50px;
+    position: relative;
+    display: inline-block;
+    /* padding: 30px 0px 0px 300px; */
+}
+
+#homepage-rightOfBox {
+    display: inline-block;
+    margin: 0 auto 0 auto;
+}
+#homepage-belowBox {
+    display: flex;
+    justify-content:center;
+    margin: 60px 65% 0 0;
+}
+#green-box {
+    position: absolute;
+    bottom: -90px;
+    right: -90px;
+    width: 160px;
+    height: 160px;
+    background-color: #2e7d5e;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.white-heli-logo {
+    width: 97px;
+    height: 97px;
+}
+
+#hompage-box-textbox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: inherit;
+    width: 800px;
+    padding: 30px;
+    height: 300px;
+    border: 1.5px solid black;
+    border-radius: 4px;
+    background: #fff;
+    font-size: 18px;
+    line-height: 1.6;
+    box-sizing: border-box;
+    pointer-events: none;
+    cursor: default;
+    outline: none;
+}
+
+#purple-heli-homepage {
+    display: inline-block;
+    height: 110px;
+    width: 110px;
+}
+
+#yellow-heli-homepage {
+    display: inline-block;
+    height: 150px;
+    width: 159px;
+}
+
+#green-star-homepage {
+        justify-content: center;
+    align-items: center;
+    width: 155px;
+    height: 149px;
+}
+
+#home-title {
+    width: 100%;
+    color: #04915F;
+    font-weight: normal;
+    margin-left: 5%;
+}
+
+#home-title .bold {
+    font-weight: bold;
+}
+
+#home-title .italic {
+    font-style: italic;
+    font-weight: lighter;
+}
+
+/* ====================================== PEOPLE STYLING ====================================== */
+
+#people-title {
+    padding-left: 10%;
+    color: #63058C;
+}
+
+.people-headings {
+    color: #04915F;
+    margin: 50px 0px 50px 10%;
+    padding-bottom: 20px
+}
+
+/* --- Principal Investigator --- */
+#raquel-section {
+    margin-left: 10%;
+}
+
+#raquel-section .student {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 40px;
+    width: 100%;
+    text-align: left;
+}
+
+#raquel-section .headshot-wrap {
+    flex-shrink: 0;
+}
+
+#raquel-section p {
+    flex: 1;
+    margin: 0;
+    align-self: center;
+}
+
+#raquel-section .student {
+    max-width: 100%;
+}
+
+.pi-text {
+    width: 55%;
+    font-size: 22px;
+}
+
+/* --- Student grid --- */
+#phd-students-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    gap: 40px;
+    margin-left: 10%;
+}
+
+#undergrad-students-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+    margin-left: 10%;
+}
+
+#alumni-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: left;
+    margin-left: 10%;
+    gap: 80px;
+}
+
+.student {
+    width: 35%;
+    max-width: 400px;
+    text-align: left;
+}
+
+/* --- Headshot wrappers --- */
+.headshot-wrap {
+    position: relative;
+    width: 100%;
+    max-width: 350px;
+    aspect-ratio: 1 / 1;
+    flex-shrink: 0;
+}
+
+#alumni-container .headshot-wrap {
+    max-width: 250px;
+    margin: 0px;
+}
+
+.headshots {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+    display: block;
+}
+
+.headshots-tan {
+    background-color: tan;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.headshots-purple {
+    background-color: purple;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.headshots-tan img,
+.headshots-purple img {
+    width: 60%;
+    height: 60%;
+    object-fit: contain;
+}
+
+/* --- SVG arc overlay --- */
+.headshot-wrap svg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: visible;
+    pointer-events: none;
+}
+
+.linkedin-link {
+    display: block;
+    margin-top: 8px;
+    font-size: 14px;
+    color: black;
+    text-decoration: underline;
+}
+
+/* --- Hide original h3 (replaced by SVG arc) --- */
+h3.person-name {
+    display: none;
+}
+
+.alumni-student {
+    display: inline-block;
+}
+
+#alumni-container .student {
+    flex: 0 0 auto;
+    width: auto;
+}
+
+.student:nth-child(odd) {
+    margin-top: 0px;
+}
+
+.student:nth-child(even) {
+    margin-top: 50px;
 }
